<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="com.lucasurbas.heresdktest.ui.map.HereMapActivity">

    <!-- Map Fragment embedded with the map object -->
    <fragment
        android:id="@+id/activity_map__fragment_map"
        class="com.here.android.mpa.mapping.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.arlib.floatingsearchview.FloatingSearchView
        android:id="@+id/activity_map__search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:floatingSearch_close_search_on_keyboard_dismiss="true"
        app:floatingSearch_leftActionMode="showSearch"
        app:floatingSearch_menu="@menu/menu_map"
        app:floatingSearch_searchBarMarginLeft="@dimen/search_view_inset"
        app:floatingSearch_searchBarMarginRight="@dimen/search_view_inset"
        app:floatingSearch_searchBarMarginTop="@dimen/search_view_inset"
        app:floatingSearch_searchHint="@string/activity_map__search_hint"
        app:floatingSearch_showSearchKey="false"
        app:floatingSearch_suggestionsListAnimDuration="200"/>
    
    <LinearLayout
        android:id="@+id/activity_map__no_permissions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:gravity="center"
            android:text="@string/activity_map__no_permissions"/>

        <Button
            android:id="@+id/activity_map__retry_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_retry"/>
    </LinearLayout>
</FrameLayout>
